--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1940,6 +1940,40 @@ html {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+.collapse {
+  display: grid;
+  overflow: hidden;
+  position: relative;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+.collapse-content,.collapse-title,.collapse>input[type=checkbox] {
+  grid-column-start: 1;
+  grid-row-start: 1;
+}
+.collapse>input[type=checkbox] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  opacity: 0;
+}
+.collapse-content {
+  overflow: hidden;
+  grid-row-start: 2;
+  max-height: 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  cursor: unset;
+  transition: padding .2s ease-in-out,background-color .2s ease-in-out;
+}
+.collapse-open .collapse-content,.collapse:focus:not(.collapse-close) .collapse-content,.collapse:not(.collapse-close) input[type=checkbox]:checked~.collapse-content {
+  max-height: 9000px;
+  --tw-bg-opacity: 0.1;
+  background-color: hsla(var(--bc) / var(--tw-bg-opacity, 1));
+  opacity: 1;
+  padding-bottom: 1rem;
+  transition: padding .2s ease-in-out,background-color .2s ease-in-out;
+}
 .dropdown {
   display: inline-block;
   position: relative;
@@ -2654,6 +2688,63 @@ html {
   to {
     background-position-y: 0;
   }
+}
+.collapse-arrow .collapse-title:after {
+  display: block;
+  height: .5rem;
+  position: absolute;
+  width: .5rem;
+  transition-property: all;
+  transition-duration: .3s;
+  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+  top: 1.4rem;
+  right: 1.4rem;
+  content: "";
+  transform-origin: 75% 75%;
+  transform: rotate(45deg);
+  box-shadow: 2px 2px;
+  pointer-events: none;
+}
+.collapse-plus .collapse-title:after {
+  display: block;
+  height: .5rem;
+  position: absolute;
+  width: .5rem;
+  transition-property: all;
+  transition-duration: .3s;
+  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+  top: .9rem;
+  right: 1.4rem;
+  content: "+";
+  pointer-events: none;
+}
+.collapse:not(.collapse-open):not(.collapse-close) .collapse-title,.collapse:not(.collapse-open):not(.collapse-close) input[type=checkbox] {
+  cursor: pointer;
+}
+.collapse:focus:not(.collapse-open):not(.collapse-close) .collapse-title {
+  cursor: unset;
+}
+.collapse-title,.collapse>input[type=checkbox] {
+  padding: 1rem 3rem 1rem 1rem;
+  width: 100%;
+  min-height: 3.75rem;
+  transition: background-color .2s ease-in-out;
+}
+.collapse:not(.collapse-close) input[type=checkbox]:focus~.collapse-title {
+  --tw-bg-opacity: 0.1;
+  background-color: hsla(var(--bc) / var(--tw-bg-opacity, 1));
+}
+.collapse-open .collapse-title,.collapse:focus:not(.collapse-close) .collapse-title,.collapse:not(.collapse-close) input[type=checkbox]:checked~.collapse-title {
+  --tw-bg-opacity: 0.1;
+  background-color: hsla(var(--bc) / var(--tw-bg-opacity, 1));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+.collapse-arrow:focus:not(.collapse-close) .collapse-title:after,.collapse-arrow:not(.collapse-close) input[type=checkbox]:checked~.collapse-title:after,.collapse-open.collapse-arrow .collapse-title:after {
+  transform: rotate(225deg);
+}
+.collapse-open.collapse-plus .collapse-title:after,.collapse-plus:focus:not(.collapse-close) .collapse-title:after,.collapse-plus:not(.collapse-close) input[type=checkbox]:checked~.collapse-title:after {
+  content: "−";
 }
 .drawer-toggle:focus-visible~.drawer-content .drawer-button.btn-primary {
   box-shadow: 0 0 0 2px hsl(var(--b1)), 0 0 0 4px hsl(var(--p));
