--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3305,14 +3305,14 @@ html {
 .-mt-px {
   margin-top: -1px;
 }
+.-ml-1 {
+  margin-left: -0.25rem;
+}
 .mb-8 {
   margin-bottom: 2rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-.-ml-1 {
-  margin-left: -0.25rem;
 }
 .block {
   display: block;
@@ -3365,14 +3365,14 @@ html {
 .h-auto {
   height: auto;
 }
-.h-2 {
-  height: 0.5rem;
-}
 .h-full {
   height: 100%;
 }
 .h-\[90\%\] {
   height: 90%;
+}
+.h-2 {
+  height: 0.5rem;
 }
 .max-h-\[30rem\] {
   max-height: 30rem;
@@ -3425,23 +3425,11 @@ html {
 .w-\[90\%\] {
   width: 90%;
 }
-.w-1\/2 {
-  width: 50%;
-}
 .w-1\/4 {
   width: 25%;
 }
-.w-96 {
-  width: 24rem;
-}
-.w-80 {
-  width: 20rem;
-}
-.w-72 {
-  width: 18rem;
-}
-.w-56 {
-  width: 14rem;
+.w-1\/2 {
+  width: 50%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -3522,6 +3510,16 @@ html {
   -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
           animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
+@keyframes spin {
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+.animate-spin {
+  -webkit-animation: spin 1s linear infinite;
+          animation: spin 1s linear infinite;
+}
 @-webkit-keyframes ping {
 
   75%, 100% {
@@ -3539,16 +3537,6 @@ html {
 .animate-ping {
   -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
           animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-}
-@keyframes spin {
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-.animate-spin {
-  -webkit-animation: spin 1s linear infinite;
-          animation: spin 1s linear infinite;
 }
 .cursor-default {
   cursor: default;
@@ -3594,6 +3582,12 @@ html {
 }
 .justify-between {
   justify-content: space-between;
+}
+.justify-around {
+  justify-content: space-around;
+}
+.justify-evenly {
+  justify-content: space-evenly;
 }
 .gap-6 {
   gap: 1.5rem;
@@ -3774,14 +3768,6 @@ html {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-.bg-blue-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
-}
 .bg-indigo-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(129 140 248 / var(--tw-bg-opacity));
@@ -3789,6 +3775,14 @@ html {
 .bg-green-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+}
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
@@ -4436,18 +4430,6 @@ html {
 }
 @media print {
 
-  .print\:visible {
-    visibility: visible;
-  }
-
-  .print\:block {
-    display: block;
-  }
-
-  .print\:hidden {
-    display: none;
-  }
-
   .print\:pt-0 {
     padding-top: 0px;
   }
@@ -4744,24 +4726,12 @@ html {
     grid-column: span 4 / span 4;
   }
 
-  .lg\:h-14 {
-    height: 3.5rem;
-  }
-
-  .lg\:h-12 {
-    height: 3rem;
-  }
-
   .lg\:max-h-full {
     max-height: 100%;
   }
 
   .lg\:w-1\/2 {
     width: 50%;
-  }
-
-  .lg\:w-auto {
-    width: auto;
   }
 
   .lg\:overflow-visible {
